changes: parser is working with - Integer, Double types - Add, substract, multiply and divide operations
TODO
- parse parenthesis
- parse functions
- parse other types such as strings, matrix, complex and vectors
- include mathematical constants